--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "element-ui": "^2.3.4",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
