--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "firebase-serve": "nuxt generate; firebase serve",
+    "firebase-deploy": "nuxt generate; firebase deploy"
   },
   "dependencies": {
     "element-ui": "^2.3.4",
@@ -21,6 +23,7 @@
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "firebase-tools": "^3.18.4"
   }
 }
