--- a/functions/package.json
+++ b/functions/package.json
@@ -2,15 +2,16 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "serve": "firebase serve --only functions",
+    "serve": "cp development.json .runtimeconfig.json; firebase serve --only functions --project imakoko-dev",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "deploy": "cp development.json .runtimeconfig.json; firebase deploy --only functions --project imakoko-dev",
+    "logs": "firebase functions:log --project imakoko-dev"
   },
   "dependencies": {
     "firebase-admin": "~5.12.0",
     "firebase-functions": "^1.0.1",
+    "express": "^4.16.3",
     "random-number": "^0.0.9",
     "zero-fill": "^2.2.3"
   },
