--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
     "firebase-admin": "~5.12.0",
     "firebase-functions": "^1.0.1",
     "express": "^4.16.3",
+    "express-validator": "^5.1.2",
     "random-number": "^0.0.9",
     "zero-fill": "^2.2.3"
   },
