--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase-deploy": "nuxt generate; firebase deploy"
   },
   "dependencies": {
+    "bulma": "^0.7.1",
     "element-ui": "^2.3.4",
     "nuxt": "^1.0.0"
   },
@@ -24,6 +25,8 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
-    "firebase-tools": "^3.18.4"
+    "firebase-tools": "^3.18.4",
+    "node-sass": "^4.8.3",
+    "sass-loader": "^7.0.1"
   }
 }
