--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,9 @@
 {
   "hosting": {
     "public": "dist",
+    "rewrites": [ {
+      "source": "/api/**", "function": "api"
+    }],
     "ignore": [
       "firebase.json",
       "**/.*",
