--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase-deploy": "nuxt generate; firebase deploy"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.1.1",
     "bulma": "^0.7.1",
     "element-ui": "^2.3.4",
     "google-maps": "^3.3.0",
