--- a/functions/package.json
+++ b/functions/package.json
@@ -2,17 +2,18 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "serve": "cp development.json .runtimeconfig.json; firebase serve --only functions --project imakoko-dev",
+    "serve": "firebase serve --only functions --project imakoko-dev",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "cp development.json .runtimeconfig.json; firebase deploy --only functions --project imakoko-dev",
+    "deploy": "firebase deploy --only functions --project imakoko-dev",
     "logs": "firebase functions:log --project imakoko-dev"
   },
   "dependencies": {
-    "firebase-admin": "~5.12.0",
-    "firebase-functions": "^1.0.1",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-validator": "^5.1.2",
+    "firebase-admin": "~5.12.0",
+    "firebase-functions": "^1.0.1",
     "random-number": "^0.0.9",
     "zero-fill": "^2.2.3"
   },
