--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "tamakon",
   "private": true,
   "scripts": {
-    "dev": "nuxt --spa",
+    "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
