取得した地点にマーカを設置するように。

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 GOOGLE_MAPS_API=google_maps_apiのkeyを格納
 FIREBASE_DATABASE_URL=https://imakoko-dev.firebaseio.com
 FIREBASE_DATABASE_AUTH_UID=function-service-worker
+API_ROOT=http://localhost:5000
