--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^5.1.2",
     "firebase-admin": "~5.12.0",
     "firebase-functions": "^1.0.1",
+    "moment": "^2.22.1",
     "random-number": "^0.0.9",
     "zero-fill": "^2.2.3"
   },
