--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@ GOOGLE_MAPS_API=google_maps_apiのkeyを格納
 FIREBASE_DATABASE_URL=https://imakoko-dev.firebaseio.com
 FIREBASE_DATABASE_AUTH_UID=function-service-worker
 API_ROOT=http://localhost:5000
+SLACK_WEBHOOK_URL=slackのwebhook-urlを格納
