--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^4.0.0",
     "firebase-tools": "^3.18.4",
     "node-sass": "^4.8.3",
+    "slack-webhook": "^1.0.0",
     "sass-loader": "^7.0.1"
   }
 }
